[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/ui/HealthBar/player-health-bar-over.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/HealthBar/player-health-bar-health.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/HealthBar/player-health-bar-under.png" type="Texture" id=3]
[ext_resource path="res://assets/font,themes/labels.tres" type="DynamicFont" id=4]
[ext_resource path="res://src/Screens/Player_UI.gd" type="Script" id=5]
[ext_resource path="res://assets/font,themes/dynamic_font_pokus.tres" type="DynamicFont" id=6]
[ext_resource path="res://src/UI/Inventory/Inventory.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/UI/Hotbar/Hotbar.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/font,themes/fonts/m3x6.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://src/UI/Shop/Shop.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/font,themes/fonts/PixelRPG.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://assets/ui/backward.png" type="Texture" id=12]
[ext_resource path="res://assets/ui/forward.png" type="Texture" id=13]
[ext_resource path="res://assets/new/effects_sounds/player/switch1.wav" type="AudioStream" id=14]
[ext_resource path="res://src/Screens/Settings.tscn" type="PackedScene" id=15]

[sub_resource type="DynamicFont" id=2]
size = 72
font_data = ExtResource( 11 )

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/GridContainer/Label_settings:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CenterContainer/GridContainer/Label_quit:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CenterContainer/GridContainer/Label_continue:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "selected_continue"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/GridContainer/Label_continue:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.894118, 0.12549, 0.12549, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Right:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 527, 311 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Right/Left:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 220, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "selected_quit"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/GridContainer/Label_quit:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.894118, 0.12549, 0.12549, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Right:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 572, 397 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Right/Left:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 130, 0 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "selected_settings"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/GridContainer/Label_settings:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.894118, 0.12549, 0.12549, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Right:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 527, 356 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Right/Left:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 220, 0 ) ]
}

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 9 )

[node name="Player_UI" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player_health" type="TextureProgress" parent="."]
margin_left = 24.0
margin_top = 672.0
margin_right = 88.0
margin_bottom = 680.0
rect_scale = Vector2( 3, 3 )
texture_under = ExtResource( 3 )
texture_over = ExtResource( 1 )
texture_progress = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hp_text" type="Label" parent="Player_health"]
margin_top = -5.0
margin_right = 64.0
margin_bottom = 8.0
custom_fonts/font = ExtResource( 6 )
text = "%s"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseOverlay" type="ColorRect" parent="."]
visible = false
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 0.286275 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_paused" type="Label" parent="PauseOverlay"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -144.0
margin_top = 147.0
margin_right = 144.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 2 )
text = "PAUSED"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="PauseOverlay"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="PauseOverlay/CenterContainer"]
margin_left = 544.0
margin_top = 296.0
margin_right = 736.0
margin_bottom = 423.0
custom_constants/vseparation = 8

[node name="Label_continue" type="Label" parent="PauseOverlay/CenterContainer/GridContainer"]
margin_right = 192.0
margin_bottom = 37.0
mouse_filter = 0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 4 )
text = "CONTINUE"
align = 1

[node name="Label_settings" type="Label" parent="PauseOverlay/CenterContainer/GridContainer"]
margin_top = 45.0
margin_right = 192.0
margin_bottom = 82.0
mouse_filter = 0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 4 )
text = "SETTINGS"
align = 1

[node name="Label_quit" type="Label" parent="PauseOverlay/CenterContainer/GridContainer"]
margin_top = 90.0
margin_right = 192.0
margin_bottom = 127.0
mouse_filter = 0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 4 )
text = "QUIT"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="PauseOverlay"]
anims/RESET = SubResource( 8 )
anims/selected_continue = SubResource( 5 )
anims/selected_quit = SubResource( 9 )
anims/selected_settings = SubResource( 10 )

[node name="Right" type="Sprite" parent="PauseOverlay"]
position = Vector2( 527, 311 )
texture = ExtResource( 13 )

[node name="Left" type="Sprite" parent="PauseOverlay/Right"]
position = Vector2( 220, 0 )
texture = ExtResource( 12 )

[node name="Label_switch" type="AudioStreamPlayer" parent="PauseOverlay"]
stream = ExtResource( 14 )
bus = "Sfx"

[node name="Settings" parent="PauseOverlay" instance=ExtResource( 15 )]
visible = false

[node name="Gold_label" type="Label" parent="."]
margin_left = 1185.0
margin_top = 24.0
margin_right = 1256.0
margin_bottom = 79.0
custom_fonts/font = SubResource( 1 )
text = "Golds: %s
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory" parent="." instance=ExtResource( 7 )]
visible = false

[node name="Hotbar" parent="." instance=ExtResource( 8 )]

[node name="Shop" parent="." instance=ExtResource( 10 )]
visible = false

[connection signal="inv_was_closed" from="." to="Hotbar" method="_on_Player_UI_inv_was_closed"]
[connection signal="inv_was_opened" from="." to="Hotbar" method="_on_Player_UI_inv_was_opened"]
[connection signal="gui_input" from="PauseOverlay/CenterContainer/GridContainer/Label_continue" to="." method="_on_Label_continue_gui_input"]
[connection signal="gui_input" from="PauseOverlay/CenterContainer/GridContainer/Label_settings" to="." method="_on_Label_settings_gui_input"]
[connection signal="gui_input" from="PauseOverlay/CenterContainer/GridContainer/Label_quit" to="." method="_on_Label_quit_gui_input"]
[connection signal="settings_label_back" from="PauseOverlay/Settings" to="." method="_on_Settings_settings_label_back"]
